# AICourseStudio

./: .coverage  .dockerignore  .gitignore  ARCHITECTURE.md  AUDIO_CACHE_GUIDE.md  CLI_GUIDE.md  CONFIG_FILE_GUIDE.md  ENV_VAR_SETUP.md  EXAMPLES.md  FILES_CREATED.md  IMPLEMENTATION_SUMMARY.md  LOGGING_GUIDE.md  MIGRATION.md  MINIMAX_GUIDE.md  MINIMAX_INTEGRATION.md  MINIMAX_README.md  PROJECT_SUMMARY.md  QUICKSTART_MINIMAX.md  QUICK_REFERENCE.md  README.md  README_NEW.md  REFACTOR_SUMMARY.md  START_HERE.md  TEST_REPORT.md  TEST_SUMMARY.md  TTS_VERIFICATION_REPORT.md  Timeline.md  WORK_SUMMARY_ENV_VAR.md  extract_ppt.py  pyproject.toml  run.sh  run_tests.sh
datas/: 工匠成长路径与方法.pptx  项目4 Shell脚本编程.pptx
docker/: 99-vidppt-fonts.conf  Dockerfile  Dockerfile.macos  docker-compose.dev.yml  docker-compose.yml
docker/fonts/: README.txt
examples/: config_example.json  config_example.yaml  config_minimax.yaml  config_qwen_volcengine.yaml
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_minimax_llm_real.py  test_minimax_real.py  test_tts_integration.py
tests/unit/: test_audio_cache.py  test_cli.py  test_config_file.py  test_course_generation.py  test_directory_creation.py  test_empty_text_pages.py  test_illustration_generator.py  test_llm_engines.py  test_minimax_tts.py  test_models.py  test_pipeline.py  test_processors.py  test_progress.py  test_qwen_volcengine.py  test_registry.py  test_task_store.py  test_tts_engines.py  test_tts_real.py  test_web_auth.py  test_web_course_routes.py  test_web_state.py
vidppt/: __init__.py  __main__.py  cli.py  course_pipeline.py  pipeline.py
vidppt/core/: course.py  interfaces.py  models.py  registry.py
vidppt/engines/image_converter/: converters.py
vidppt/engines/llm/: __init__.py  api_llm_engine.py  minimax_llm_engine.py  openai_llm_engine.py  qwen_llm_engine.py
vidppt/engines/ocr/: ocr_engines.py
vidppt/engines/tts/: __init__.py  api_tts_engine.py  edge_tts_engine.py  volcengine_tts_engine.py
vidppt/generation/: __init__.py  course_builder.py  illustration_generator.py
vidppt/ingestion/: __init__.py  models.py  reader.py
vidppt/processors/: __init__.py  pdf_processor.py  ppt_processor.py
vidppt/renderers/: __init__.py  pptx_renderer.py  subtitles.py
vidppt/review/: __init__.py  course_reviewer.py
vidppt/utils/: audio_cache.py  config_converter.py  config_loader.py  logger.py  progress.py  subtitle_rules.py  video_composer.py
vidppt/video_composer/: ARCHITECTURE.md  composer.py  test_composer.py  tts_processors.py
vidppt/video_composer/providers/: __init__.py  base.py  heygen.py  registry.py  sadtalker.py
web/: app.py  task_store.py
web/api/: system_stats.py
web/static/css/: dashboard.css  login.css  main.css
web/static/js/: dashboard.js  (+5 more)
web/templates/: accounts.html  data_management.html  debug.html  index.html  login.html  operation_logs.html
