[project]
name = "vidppt"
version = "0.2.0"
description = "Convert documents (PPT/PDF/Word) to narrated videos with extensible architecture"
requires-python = ">=3.12"
dependencies = [
    "python-pptx>=1.0.2",
    "Pillow>=10.0.0",
    "spire.presentation>=9.0.0",
    "edge-tts>=7.2.8",
    "moviepy>=2.2.1",
]

[project.optional-dependencies]
pdf = [
    "pdfplumber>=0.10.0",
    "pdf2image>=1.16.0",
]
ocr = [
    "pytesseract>=0.3.10",
]
api = [
    "httpx>=0.25.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.scripts]
vidppt = "vidppt.cli:main"
extract-ppt = "extract_ppt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

