[project]
name = "vidppt"
version = "0.2.0"
description = "Convert documents (PPT/PDF/Word) to narrated videos with extensible architecture"
requires-python = ">=3.12"
dependencies = [
    "python-pptx>=1.0.2",
    "Pillow>=10.0.0",
    "spire.presentation>=9.0.0",
    "edge-tts>=7.2.8",
    "moviepy>=2.2.1",
    "loguru>=0.7.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
pdf = [
    "pdfplumber>=0.10.0",
    "pdf2image>=1.16.0",
]
ocr = [
    "pytesseract>=0.3.10",
]
api = [
    "httpx>=0.25.0",
]
dashboard = [
    "psutil>=5.9.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
]

[project.scripts]
vidppt = "vidppt.cli:main"
extract-ppt = "extract_ppt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
    "--color=yes",
]
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "slow: 运行较慢的测试",
    "asyncio: marks tests as asyncio (deselect with '-m \"not asyncio\"')",
]

[tool.pytest_asyncio]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["vidppt"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

